# Pepper

./: .clang-format  .clang_complete  .gdbinit  .gitignore  .gitmodules  Makefile  README.md  config.mk
hdd/boot/grub/: grub.cfg
modules/: CMakeLists.txt  depmod.pl  depmod.sh  test.cc
modules/ahci/: CMakeLists.txt  ahci.cc  ahci.h  controller.cc  port.cc
modules/test/: CMakeLists.txt  test.cc
sysroot/boot/grub/: grub.cfg
toolchain/: automake@1.12.rb  binutils-2.30.patch  binutils-2.31.patch  gcc-8.1.0.patch  gcc-8.2.0.patch  grub-2.02.patch  grub.sh  newlib-3.0.0.patch  newlib.sh  toolchain.sh
toolchain/newlib/pepper/: Makefile.am  Makefile.in  configure  configure.in  crt0.c  malloc.c  malloc.h  syscall.S  syscalls.c  ucontext.h
toolchain/newlib/pepper/autom4te.cache/: output.0  requests  traces.0  traces.1
toolchain/newlib/pepper/i686/: syscall.S
toolchain/newlib/pepper/i686/sys/: syscall.h
toolchain/newlib/pepper/sys/: mman.h  signal.h  syscall.h  syscall_numbers.h  ucontext.h
toolchain/newlib/pepper/x86_64/: syscall.S
toolchain/newlib/pepper/x86_64/sys/: mcontext.h  syscall.h
userspace/: CMakeLists.txt
userspace/core/: CMakeLists.txt  init.c  sh.c  terminal.c
userspace/extra/: CMakeLists.txt  hello.c  signal.c
userspace/initrd/: CMakeLists.txt  init.c
userspace/lib/: CMakeLists.txt  kb.c  kb.h
